RESOLVED FIXED220466
A video element needs to ignore the request to enter/exit fullscreen before the current fullscreen mode change is completed
https://bugs.webkit.org/show_bug.cgi?id=220466
Summary A video element needs to ignore the request to enter/exit fullscreen before t...
Peng Liu
Reported 2021-01-08 09:51:48 PST
A video element needs to ignore the request to enter/exit fullscreen before the current fullscreen mode change is done
Attachments
Patch (2.03 KB, patch)
2021-01-08 10:12 PST, Peng Liu
jer.noble: review+
ews-feeder: commit-queue-
Fix a layout test failure (4.16 KB, patch)
2021-01-08 14:04 PST, Peng Liu
no flags
A follow-up patch to fix test timeout (4.81 KB, patch)
2021-01-11 10:47 PST, Peng Liu
no flags
Peng Liu
Comment 1 2021-01-08 10:10:16 PST
Peng Liu
Comment 2 2021-01-08 10:12:16 PST
Peng Liu
Comment 3 2021-01-08 14:04:55 PST
Created attachment 417302 [details] Fix a layout test failure
EWS
Comment 4 2021-01-08 19:11:10 PST
Committed r271341: <https://trac.webkit.org/changeset/271341> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417302 [details].
Philippe Normand
Comment 5 2021-01-11 07:39:03 PST
This test is no longer flaky on GTK/WPE, it's now a timeout... Progress?
Philippe Normand
Comment 6 2021-01-11 07:40:46 PST
Comment on attachment 417302 [details] Fix a layout test failure View in context: https://bugs.webkit.org/attachment.cgi?id=417302&action=review > LayoutTests/media/media-fullscreen.js:44 > + await testExpectedEventually("internals.isChangingPresentationMode(mediaElement)", false); GTK/WPE don't enable VIDEO_PRESENTATION_MODE yet, I suppose that's why the test now times out for us.
Truitt Savell
Comment 7 2021-01-11 08:55:59 PST
media/modern-media-controls/media-controller/media-controller-fullscreen-change.html this test is now timing out after the changes in https://trac.webkit.org/changeset/271341/webkit History: https://results.webkit.org/?suite=layout-tests&test=media%2Fmodern-media-controls%2Fmedia-controller%2Fmedia-controller-fullscreen-change.html
Peng Liu
Comment 8 2021-01-11 09:38:40 PST
(In reply to Philippe Normand from comment #6) > Comment on attachment 417302 [details] > Fix a layout test failure > > View in context: > https://bugs.webkit.org/attachment.cgi?id=417302&action=review > > > LayoutTests/media/media-fullscreen.js:44 > > + await testExpectedEventually("internals.isChangingPresentationMode(mediaElement)", false); > > GTK/WPE don't enable VIDEO_PRESENTATION_MODE yet, I suppose that's why the > test now times out for us. So we had better disable the test for GTK/WPE?
Peng Liu
Comment 9 2021-01-11 10:47:46 PST
Reopening to attach new patch.
Peng Liu
Comment 10 2021-01-11 10:47:48 PST
Created attachment 417392 [details] A follow-up patch to fix test timeout
EWS
Comment 11 2021-01-11 13:34:01 PST
Committed r271377: <https://trac.webkit.org/changeset/271377> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417392 [details].
Note You need to log in before you can comment on or make changes to this bug.