A video element needs to ignore the request to enter/exit fullscreen before the current fullscreen mode change is completed https://bugs.webkit.org/show_bug.cgi?id=220466

Reviewed by Jer Noble.

Source/WebCore:

Fix a flaky layout test: media/media-fullscreen-inline.html

* html/HTMLVideoElement.cpp:
(WebCore::HTMLVideoElement::webkitEnterFullscreen):
(WebCore::HTMLVideoElement::webkitExitFullscreen):

LayoutTests:

* media/media-fullscreen-inline-expected.txt:
* media/media-fullscreen.js:
(async beginfullscreen):


Canonical link: https://commits.webkit.org/232908@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271341 268f45cc-cd09-0410-ab3c-d52691b4dbfc